--- a/abouteme.html
+++ b/abouteme.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body style="background-color: rgb(255, 255, 255);">
@@ -76,6 +77,27 @@
             <b>Traveling:</b> Exploring new cultures and experiencing diverse cuisines is something I'm truly passionate about. Traveling allows me to broaden my horizons, learn from different perspectives, and create lasting memories.</h5>
 
     </div>
+
+    <div style="height: 100px; text-align: left;" class="instrodution">
+        <div class="intr">
+            <h2>My Skills</h2>
+        </div>
+        <h5> <h5>
+
+    </div>
+
+
+<div class="skills">
+    <button id="photography" type="button" class="btn btn-outline-primary">Primary</button>
+    <button id="development" type="button" class="btn btn-outline-primary">Primary</button>
+    <button id="design" type="button" class="btn btn-outline-primary">Primary</button>
+    <button type="button" class="btn btn-outline-primary">Primary</button>
+
+</div>
+
+
+
+
 
 
 </body>
