--- a/abouteme.html
+++ b/abouteme.html
@@ -131,7 +131,7 @@
         </div>
         <div class="skill">
             <div class="squre"></div>
-            <div class="squre"> <button id="development" type="button" class="btn btn-outline-primary">Primary</button>
+            <div class="squre"> <button id="development" type="button" class="btn btn-outline-primary">frontend Develop</button>
             </div>
             <div class="squre"></div>
             <div class="squre"> <button type="button" class="btn btn-outline-primary">Primary</button></div>
